@@ -1,8 +1,11 @@
 package com.rahmatullahsaruk.stock_management.restcontroller;
 
 import com.rahmatullahsaruk.stock_management.dto.InvoiceDTO;
+import com.rahmatullahsaruk.stock_management.dto.SalesSummaryDTO;
 import com.rahmatullahsaruk.stock_management.entity.Invoice;
+import com.rahmatullahsaruk.stock_management.entity.Product;
 import com.rahmatullahsaruk.stock_management.mapper.InvoiceMapper;
+import com.rahmatullahsaruk.stock_management.repository.InvoiceRepo;
 import com.rahmatullahsaruk.stock_management.service.InvoiceService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
@@ -10,7 +13,6 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @CrossOrigin(origins = "*")
 @RestController
@@ -20,90 +22,89 @@ public class InvoiceController {
     @Autowired
     private InvoiceService invoiceService;
 
+    @Autowired
+    private InvoiceRepo invoiceRepo;
+
     // ✅ Create Invoice
     @PostMapping
-    public ResponseEntity<InvoiceDTO> createInvoice(@RequestBody InvoiceDTO invoiceDTO) {
-        Invoice invoice = InvoiceMapper.toEntity(invoiceDTO);
+    public ResponseEntity<InvoiceDTO> createInvoice(@RequestBody Invoice invoice) {
         Invoice saved = invoiceService.save(invoice);
         return ResponseEntity.ok(InvoiceMapper.toDTO(saved));
     }
 
-    /**
-     * Example request body:
-     * {
-     *   "customerName": "John Doe",
-     *   "customerEmail": "john@example.com",
-     *   "customerPhone": "123456789",
-     *   "customerAddress": "Dhaka, Bangladesh",
-     *   "discount": 100,
-     *   "paid": 500,
-     *   "products": [
-     *     { "id": 1, "quantity": 1 },
-     *     { "id": 5, "quantity": 2 }
-     *   ]
-     * }
-     */
-
     // ✅ Get All Invoices
     @GetMapping
     public ResponseEntity<List<InvoiceDTO>> getAllInvoices() {
-        List<InvoiceDTO> invoices = invoiceService.getAll()
-                .stream()
+        List<Invoice> invoices = invoiceService.getAll();
+        List<InvoiceDTO> invoiceDTOs = invoices.stream()
                 .map(InvoiceMapper::toDTO)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(invoices);
+                .toList();
+        return ResponseEntity.ok(invoiceDTOs);
     }
 
     // ✅ Get Invoice by ID
     @GetMapping("/{id}")
     public ResponseEntity<InvoiceDTO> getInvoiceById(@PathVariable Long id) {
         Optional<Invoice> invoiceOpt = invoiceService.getById(id);
-        return invoiceOpt.map(invoice -> ResponseEntity.ok(InvoiceMapper.toDTO(invoice)))
+        return invoiceOpt
+                .map(invoice -> ResponseEntity.ok(InvoiceMapper.toDTO(invoice)))
                 .orElse(ResponseEntity.notFound().build());
     }
 
     // ✅ Update Invoice
     @PutMapping("/{id}")
-    public ResponseEntity<InvoiceDTO> updateInvoice(@PathVariable Long id, @RequestBody InvoiceDTO invoiceDTO) {
-        Optional<Invoice> optionalInvoice = invoiceService.getById(id);
+    public ResponseEntity<InvoiceDTO> updateInvoice(@PathVariable Long id, @RequestBody Invoice invoiceDetails) {
+        Optional<Invoice> optionalInvoice = invoiceRepo.findById(id);
+
         if (optionalInvoice.isEmpty()) {
             return ResponseEntity.notFound().build();
         }
 
-        Invoice existing = optionalInvoice.get();
-        Invoice updatedData = InvoiceMapper.toEntity(invoiceDTO);
+        Invoice invoice = optionalInvoice.get();
 
-        // ✅ Update fields to match new entity
-        existing.setCustomerName(updatedData.getCustomerName());
-        existing.setCustomerEmail(updatedData.getCustomerEmail());
-        existing.setCustomerPhone(updatedData.getCustomerPhone());
-        existing.setCustomerAddress(updatedData.getCustomerAddress());
-        existing.setDiscount(updatedData.getDiscount());
-        existing.setTaxRate(updatedData.getTaxRate());
-        existing.setPaid(updatedData.getPaid());
+        // Update basic fields
+        invoice.setName(invoiceDetails.getName());
+        invoice.setEmail(invoiceDetails.getEmail());
+        invoice.setPhone(invoiceDetails.getPhone());
+        invoice.setAddress(invoiceDetails.getAddress());
+        invoice.setDiscount(invoiceDetails.getDiscount());
+        invoice.setTaxRate(invoiceDetails.getTaxRate());
+        invoice.setPaid(invoiceDetails.getPaid());
+        invoice.setInvoiceNumber(invoiceDetails.getInvoiceNumber());
 
-        // Replace products
-        existing.getProducts().clear();
-        if (updatedData.getProducts() != null) {
-            updatedData.getProducts().forEach(p -> p.setInvoice(existing));
-            existing.getProducts().addAll(updatedData.getProducts());
+        // Clear old products and set new products, updating invoice ref
+        invoice.getProducts().clear();
+        if (invoiceDetails.getProducts() != null) {
+            for (Product product : invoiceDetails.getProducts()) {
+                product.setInvoice(invoice);
+                invoice.getProducts().add(product);
+            }
         }
 
         // Recalculate totals
-        existing.calculateTotals();
+        invoice.calculateTotals();
 
-        Invoice saved = invoiceService.save(existing);
-        return ResponseEntity.ok(InvoiceMapper.toDTO(saved));
+        Invoice updatedInvoice = invoiceRepo.save(invoice);
+        return ResponseEntity.ok(InvoiceMapper.toDTO(updatedInvoice));
     }
 
     // ✅ Delete Invoice
     @DeleteMapping("/{id}")
     public ResponseEntity<Void> deleteInvoice(@PathVariable Long id) {
-        Optional<Invoice> invoiceOpt = invoiceService.getById(id);
-        if (invoiceOpt.isEmpty()) {
+        if (!invoiceRepo.existsById(id)) {
             return ResponseEntity.notFound().build();
         }
-        invoiceService.delete(id);
+        invoiceRepo.deleteById(id);
         return ResponseEntity.noContent().build();
+    }
+
+    // dashboard sell summary
+    @GetMapping("/sellsummary")
+    public SalesSummaryDTO getSalesSummary() {
+        Double today = invoiceService.getTodaySales();
+        Double last7 = invoiceService.getLast7DaysSales();
+        Double last30 = invoiceService.getLast30DaysSales();
+
+        return new SalesSummaryDTO(today, last7, last30);
     }
 }
